# SourceSim

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SourceSimulation.cc  gui.mac  init.mac  run.mac  source.mac  source_fast.mac  unit_test_1.mac  unit_test_2.mac  vis.mac  xray_fluo.mac
converter/: pyBAR_converter.py
depreciate/: PixelROGeometry.cc  PixelROGeometry.hh
include/: ActionInitialization.hh  DetHit.hh  DetectorConstruction.hh  DetectorMessenger.hh  Digitizer.hh  DigitizerMessenger.hh  EventAction.hh  HistoManager.hh  MeasureEnergy.hh  MeasureTrackAngle.hh  PhysicsList.hh  PhysicsListMessenger.hh  PixelDetectorMessenger.hh  PixelDetectorSD.hh  PixelDigi.hh  PixelROWorld.hh  PrimaryGeneratorAction.hh  RadioactiveDecayPhysics.hh  RunAction.hh  SiHit.hh  StackingAction.hh  TrackingAction.hh  Trigger.hh
src/: ActionInitialization.cc  DetHit.cc  DetectorConstruction.cc  DetectorMessenger.cc  Digitizer.cc  DigitizerMessenger.cc  EventAction.cc  HistoManager.cc  MeasureEnergy.cc  MeasureTrackAngle.cc  PhysicsList.cc  PhysicsListMessenger.cc  PixelDetectorMessenger.cc  PixelDetectorSD.cc  PixelDigi.cc  PixelROWorld.cc  PrimaryGeneratorAction.cc  RadioactiveDecayPhysics.cc  RunAction.cc  SiHit.cc  StackingAction.cc  TrackingAction.cc  Trigger.cc
tools/: charge_sharing_visualization.py  charge_sharing_z_correction.py  fei4_tdc_analysis.py  pyBAR_converter.py
tools/calibration_data/: plsr_dac_scan.cfg
unit_test/: 19um.ascii  unit_test_1_0.C  unit_test_1_0.C~  unit_test_1_1.C  unit_test_1_1.C~  unit_test_2.C
